# Kairo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  lima-debian-vnc.yaml  lima-kairo-river.yaml  package-lock.json  package.json  register_form.html  requirements.txt  run-kairo.sh  todo.md  tsconfig.json
.trae/rules/: arch.md
apps/web/: components.json  index.html  package-lock.json  package.json  (+2 more)
config/: devices.json
docs/: agent-runtime.md  agent_os_vision.md  architecture.md  audit-and-roadmap-2026-02.md  desktop-improvement-plan.md  development-reading-rules.md  domains.md  dual-execution.md  kdp-native-ui-proposal.md  linux_customization_plan.md  local-database-spec.md  model-substrate.md  native-apps-migration.md  object-model.md  parametric-execution.md  platform-realizations.md  prd_agent_os.md  roadmap.md  spec_agent_os_zh.md  wasm-domain.md  wasm-executor-training.md  wasm-kernel-boundary.md
kairo-kernel/: BOOT_ISSUE.md  BUILD_ISSUES.md  Cargo.toml  MIGRATION_SUCCESS.md  README.md  build.rs  build.sh  build_bootable.py  create_bootable.py  make_bootable.py  run.sh  run_qemu.sh  run_uefi.sh
kairo-kernel/.cargo/: config.toml
kairo-kernel/src/: boot_config.rs  main.rs  serial.rs  vga_buffer.rs
mcp/: README.md
os/: Dockerfile  README.md  build.zig  build.zig.zon  build_docker.sh
scripts/: deploy-vm.sh  kairo-agent-status.sh  start-river.sh  test-kernel-interactive.ts  test-memory-flow.ts  verify-env.ts
src/: index.ts
workspace/: script_1770137421065.py  script_1770527298593.py  script_1770527308033.py
xtask/: Cargo.toml
(+200 files in other folders)
